tests/valid/assert.fl
using import "../c.fl";

main :: proc () {
  @assert(1);
  @assert(123);
}
