tests/invalid/invalid_type_var.fl
main :: proc () {
  a: 123 = 123;
}
